Fixed bug #15103: TS Errors are hardly readable (white on yellow) (Thanks to Georg Ringer)
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/branches/TYPO3_4-4@8178 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/sysext/t3skin/stylesheets/visual/element_typoscript.css
+++ b/typo3/sysext/t3skin/stylesheets/visual/element_typoscript.css
@@ -53,6 +53,8 @@ pre.ts-hl .ts-error {
 	background-color: yellow;
 	border: 1px red dashed;
 	font-weight: bold;
+	color: #000;
+	color: #000;
 }
 
 pre.ts-hl .ts-linenum {
